--- a/topic_model.html
+++ b/topic_model.html
@@ -4,16 +4,18 @@
     <meta charset="utf-8">
     <script src="echarts.js"></script>
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <link rel="stylesheet" href="main.css">
+    <script src="dark.js"></script>
 </head>
 
-<body >
-    <div id="selection">
-        <div>Choose a topic:</div>
+<body>
+    <div id="selection" style="display:flex">
+            <div class="title">Choose a topic:</div>
     </div>
-    <div id="main" style="width: 1000px; height:400px;"></div>
+    <div id="main" class="container"></div>
 
     <script type="text/javascript">
-        var myChart = echarts.init(document.getElementById('main'));
+        var myChart = echarts.init(document.getElementById('main'),'dark');
 
         var colors = ["balck", "#ffcce1", "#6ab4ed", "#f484ab", "#ff9b7a", "#97f287"]
 
@@ -24,7 +26,7 @@
         }
 
 
-        $.get('topicModel.json').done(function(data) {
+        $.get('json/topicModel.json').done(function(data) {
 
             var topicNames = []
 
