--- a/topic_model_rank.html
+++ b/topic_model_rank.html
@@ -4,13 +4,15 @@
     <meta charset="utf-8">
     <script src="echarts.js"></script>
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <link rel="stylesheet" href="main.css">
+    <script src="dark.js"></script>
 </head>
 
 <body>
-    <div id="main" style="width: 800px;height:400px;"></div>
+    <div id="main" class="container"></div>
 
     <script type="text/javascript">
-        var myChart = echarts.init(document.getElementById('main'));
+        var myChart = echarts.init(document.getElementById('main'),'dark');
 
         var colors = ["balck", "#ffcce1", "#6ab4ed", "#f484ab", "#ff9b7a", "#97f287"]
 
@@ -21,7 +23,7 @@
         }
 
 
-        $.get('topicModelRank.json').done(function(data) {
+        $.get('json/topicModelRank.json').done(function(data) {
 
             var topicNames = []
             var keywords = []
@@ -48,7 +50,7 @@
                             show: true,
                             position: "right",
                             fontSize: 15,
-                            offset: [10, 0],
+                            offset: [50, 0],
                             formatter: function(params) {
                                 return params.dataIndex == years.length - 1 ? series[params.seriesIndex].keyword : "";
                             }
@@ -60,11 +62,11 @@
                 }
             }
             
-
             myChart.setOption({
                 title: {
                     left: 'center',
-                    text: 'Keyword Rank in Topic'
+                    text: 'Keyword Rank in Topic',
+                    top:20
                 },
                 legend: {
                     data: topicNames,
@@ -72,7 +74,8 @@
                     right: "center",
                     top: "10%",
                     inactiveColor: "grey",
-                    selectedMode: "single"
+                    selectedMode: "single",
+                    width:"200%"
                 },
                 grid: {
                     y: "25%",
