--- a/topic_model.html
+++ b/topic_model.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <script src="echarts.js"></script>
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
 </head>
 
 <body >
