--- a/top_citation_by_year_or_conf.html
+++ b/top_citation_by_year_or_conf.html
@@ -34,7 +34,7 @@
             });
             option = {
                 title: {
-                    text: "Ranking of Top Citied Paper In Each Conference",
+                    text: "Ranking of Top Citied Paper Cross Conferences",
                     left: "center",
                     top: 20
                 },
