--- a/citation_comparison.html
+++ b/citation_comparison.html
@@ -14,6 +14,11 @@
         <select id="selection"></select>
     </div>
     <div id="main" class="container"></div>
+    <div>
+        <div class="prev"><a href="/trend_papercount.html">Paper count over conference series</a></div>
+        <div class="home"><a href="/">Home</a></div>    
+        <div class="next"><a href="/top_citation_over_years_by_conf.html">Top cited paper over years by conference</a></div>
+    </div>
 
     <script type="text/javascript">
         var myChart = echarts.init(document.getElementById('main'),'dark');
