--- a/index.html
+++ b/index.html
@@ -14,10 +14,28 @@
     <script defer src="/__/firebase/4.12.1/firebase-storage.js"></script>
     <!-- initialize the SDK after all desired features are loaded -->
     <script defer src="/__/firebase/init.js"></script>
+    <link rel="stylesheet" href="main.css">
   </head>
 
-  <body>
-    <a href="/topic_model.html">Topic Model</a>
-    <a href="/topic_model_rank.1.html">Topic Model Rank</a>
+  <body style="text-align:left;">
+    <div class="left-column">
+      <div><b>Project work by:</b></div>
+      <div>Liu Xuhan</div>
+      <div>Liu Yijing</div>
+      <div>Zhang Chao</div>
+      <div>Zhang Xingjia</div>
+    </div>
+    <div class="right-column">
+    <h1>Conference Data Analysis</h1>
+    <h3>Trend Analysis</h3>
+    <div><a href="/trend_papercount.html">Paper count over conference series</a></div>
+    <h3>Contemporary Comparison</h3>
+    <div><a href="/citation_comparison.html">Out-citation number and lag comparison over conferences</a></div>
+    <h3>Top X of Y</h3>
+    <div><a href="/top_citation_over_years_by_conf.html">Top cited paper over years by conference</a></div>
+    <h3>Topic Model Analyais</h3>
+    <div><a href="/topic_model.html">Topic Model Analsyis</a></div>
+    <div><a href="/topic_model_rank.html">Topic Model Rank</a></div>
+    </div>
   </body>
 </html>
