--- a/top_citation_over_years_by_conf.html
+++ b/top_citation_over_years_by_conf.html
@@ -5,12 +5,15 @@
     <meta charset="utf-8">
     <script src="echarts.js"></script>
     <script src="dark.js"></script>
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
     <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
     <div id="main" class="container"></div>
+    <div class="prev"><a href="/citation_comparison.html">Out-citation number and lag comparison over conferences</a></div>
+    <div class="home"><a href="/">Home</a></div>    
+    <div class="next"><a href="/topic_model.html">Topic Model Analsyis</a></div>
 
     <script type="text/javascript">
         var raw_data;
