--- a/top_citation_over_years_by_conf.html
+++ b/top_citation_over_years_by_conf.html
@@ -13,7 +13,7 @@
     <div id="main" class="container"></div>
     <div class="prev"><a href="/citation_comparison.html">Out-citation number and lag comparison over conferences</a></div>
     <div class="home"><a href="/">Home</a></div>    
-    <div class="next"><a href="/topic_model.html">Topic Model Analsyis</a></div>
+    <div class="next"><a href="/top_citation_by_year_or_conf.html">Top cited paper by year/conference</a></div>
 
     <script type="text/javascript">
         var raw_data;
