--- a/topic_model.html
+++ b/topic_model.html
@@ -13,7 +13,7 @@
         Choose a topic: &nbsp;
     </div>
     <div id="main" class="container"></div>
-    <div class="prev"><a href="/top_citation_over_years_by_conf.html">Top cited paper over years by conference</a></div>
+    <div class="prev"><a href="/top_citation_by_year_or_conf.html">Top cited paper by year/conference</a></div>
     <div class="home"><a href="/">Home</a></div>
     <div class="next"><a href="/topic_model_rank.html">Topic Model Rank</a></div>
 
