--- a/topic_model_rank.html
+++ b/topic_model_rank.html
@@ -55,7 +55,8 @@
                                 show: true,
                                 position: "right",
                                 fontSize: 15,
-                                offset: [20, 0],
+                                offset: [10, 0],
+                                rotate: 20,
                                 formatter: function(params) {
                                     return params.dataIndex == years.length - 1 ? series[params.seriesIndex].keyword : "";
                                 }
