--- a/trend_papercount.html
+++ b/trend_papercount.html
@@ -57,7 +57,7 @@
             myChart.setOption({
                 title: {
                     left: 'center',
-                    text: 'Number of papers at conference ' + conf + ' over conference serie'
+                    text: 'Number of papers at conference ' + conf + ' over conference series'
                 },
                 legend: {
                     data:['Paper count'],
