--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <div><a href="/citation_comparison.html">Out-citation number and lag comparison over conferences</a></div>
     <h3>Top X of Y</h3>
     <div><a href="/top_citation_over_years_by_conf.html">Top cited paper over years by conference</a></div>
+    <div><a href="/top_citation_by_year_or_conf.html">Top cited paper by year/conference</a></div>
     <h3>Topic Model Analyais</h3>
     <div><a href="/topic_model.html">Topic Model Analsyis</a></div>
     <div><a href="/topic_model_rank.html">Topic Model Rank</a></div>
