add trend graph based on topics, has bug when switching different buttons

--- a/trend_papercount.html
+++ b/trend_papercount.html
@@ -16,7 +16,7 @@
     <div id="main" class="container wide"></div>
     <div class="home"><a href="/">Home</a></div>    
     <div class="next">
-        <a href="/citation_comparison.html">Out-citation number and lag comparison over conferences</a>
+        <a href="/trend_topic_comparison.html">Conference topic comparison of over time</a>
     </div>
 
     <script type="text/javascript">
