minor changes for navigation in citation_comparison.html

--- a/citation_comparison.html
+++ b/citation_comparison.html
@@ -15,7 +15,7 @@
     </div>
     <div id="main" class="container"></div>
     <div>
-        <div class="prev"><a href="/trend_papercount.html">Paper count over conference series</a></div>
+        <div class="prev"><a href="/trend_topic_comparison.html">Conference topic comparison of over time</a></div>
         <div class="home"><a href="/">Home</a></div>    
         <div class="next"><a href="/top_citation_over_years_by_conf.html">Top cited paper over years by conference</a></div>
     </div>
