--- a/citation_comparison.html
+++ b/citation_comparison.html
@@ -6,6 +6,7 @@
     <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
     <link rel="stylesheet" href="main.css">
     <script src="dark.js"></script>
+    <title>Citation count and lag for conferences</title>
 </head>
 
 <body>
